--- a/tensors.ipynb
+++ b/tensors.ipynb
@@ -29,6 +29,18 @@
         "id": "2OflJCJ6ueUM"
       },
       "source": [
+        "import torch\n",
+        "import numpy as np"
+      ],
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "VQk0dy9zfG2f"
+      },
+      "source": [
         ""
       ],
       "execution_count": null,
