--- a/tensors.ipynb
+++ b/tensors.ipynb
@@ -36,12 +36,25 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "6y7ukoH8fn-F"
+      },
+      "source": [
+        "**Tensors Initialization**"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "VQk0dy9zfG2f"
       },
       "source": [
-        ""
+        "# from data\n",
+        "      # normal array\n",
+        "      # numpy array\n",
+        "      # from another tensor\n",
+        "# random or constant initialization"
       ],
       "execution_count": null,
       "outputs": []
