--- a/tensors.ipynb
+++ b/tensors.ipynb
@@ -53,36 +53,70 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "VQk0dy9zfG2f",
-        "outputId": "5f7dd971-57b0-45c0-d7c3-45af77912554"
+        "outputId": "89bf30b7-d16b-4722-bf28-679f8f97bf02"
       },
       "source": [
         "# using creation operation: torch.*(shape), *:creation operation like ones and zeros\n",
         "# aslo see https://pytorch.org/docs/stable/torch.html#tensor-creation-ops\n",
         "shape = (2,3)\n",
-        "ones_tensor = torch.ones(shape)\n",
-        "print(ones_tensor)\n",
+        "tensor1 = torch.ones(shape)\n",
         "# from data\n",
         "      # pre-existing data: torch.tensor(data)\n",
+        "tensor2 = torch.tensor([[1., -1.], [1., -1.]])\n",
         "      # pre-existing numpy array: torch.from_numpy(np_array)\n",
+        "tensor3 = torch.tensor(np.array([[1, 2, 3], [4, 5, 6]]))\n",
         "      # from another tensor: \n",
         "         # torch.*_like(x_data), *:creation operation \n",
-        "         # tensor.new_* : the returned Tensor has the same torch.dtype and torch.device as this tensor"
+        "tensor4 = torch.ones_like(tensor3)\n",
+        "         # tensor.new_*(shape) : the returned Tensor has the same torch.dtype and torch.device as this tensor\n",
+        "tensor5 = tensor4.new_zeros((3,3))\n",
+        "\n",
+        "print(tensor1)\n",
+        "print(tensor2)\n",
+        "print(tensor3)\n",
+        "print(tensor4)\n",
+        "print(tensor5)"
       ],
-      "execution_count": 7,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "tensor([[0.3314, 0.5754, 0.6505],\n",
-            "        [0.2729, 0.0783, 0.9042]])\n",
             "tensor([[1., 1., 1.],\n",
             "        [1., 1., 1.]])\n",
-            "tensor([[0., 0., 0.],\n",
-            "        [0., 0., 0.]])\n"
+            "tensor([[ 1., -1.],\n",
+            "        [ 1., -1.]])\n",
+            "tensor([[1, 2, 3],\n",
+            "        [4, 5, 6]])\n",
+            "tensor([[1, 1, 1],\n",
+            "        [1, 1, 1]])\n",
+            "tensor([[0, 0, 0],\n",
+            "        [0, 0, 0],\n",
+            "        [0, 0, 0]])\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "KYSVFrkByFw7"
+      },
+      "source": [
+        "**Operations on Tensors**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KAtJhEyiyNq1"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
