--- a/tensors.ipynb
+++ b/tensors.ipynb
@@ -113,7 +113,41 @@
         "id": "KAtJhEyiyNq1"
       },
       "source": [
-        ""
+        "# matrix manipulation\n",
+        "   # indexing \n",
+        "   # slicing\n",
+        "   # joining\n",
+        "   # Mutating\n",
+        "   # transposing\n",
+        "\n",
+        "# Arithmetic operations\n",
+        "\n",
+        "# linear algebra\n",
+        "\n",
+        "# in-place operations\n",
+        "\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "lzojvSeOz6ba"
+      },
+      "source": [
+        "**Bridge to numpy**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SQB1IfYw0A4K"
+      },
+      "source": [
+        "# numpy to tensor\n",
+        "\n",
+        "# tensor to numpy"
       ],
       "execution_count": null,
       "outputs": []
