--- a/jax101.ipynb
+++ b/jax101.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "Untitled12.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOMn6Z6ITpnZCk1WvZ5Uq+c",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyNp1g2QMQ3LJvyeyIFYtmHz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,13 +30,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "id": "VytaXSGdAdVd"
       },
       "outputs": [],
       "source": [
-        "import jax.numpy as jnp"
+        "import jax.numpy as jnp\n",
+        "import numpy as np"
       ]
     }
   ]
